@@ -28,6 +28,7 @@ Other features
  * Removed ``assert`` statements from Wagtail API (Kim Chee Leong)
  * Update `jquery-datetimepicker` dependency to make Wagtail more CSP-friendly (`unsafe-eval`) (Mike Kamermans)
  * Added error notification when running the ``wagtail`` command on Python <3.4 (Matt Westcott)
+ * ``update_index`` management command now accepts a ``--chunk_size`` option to determine the number of items to load at once (Dave Bell)
 
 Bug fixes
 ~~~~~~~~~
